--- a/mystream/streampage/templates/login.html
+++ b/mystream/streampage/templates/login.html
@@ -38,8 +38,8 @@
 							<button class="btn btn-primary" type="submit">{{title}}</button>
 						</form>
 				  </div>
-				{% if title == "Login" %}Not Registered? <a href = "/community/register">Register Here</a>{% endif %}
-				{% if title == "Register" %}Already Registered? <a href = "/community/login">Login Here</a>{% endif %}
+				{% if title == "Login" %}Not Registered? <a href = "/streampage/register">Register Here</a>{% endif %}
+				{% if title == "Register" %}Already Registered? <a href = "/streampage/login">Login Here</a>{% endif %}
       
 				</div>
 				<div>
