--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -537,7 +537,9 @@ $( document ).ready(function() {
 		<a class="navbar-brand" href="http://3.134.79.169:8000/streampage/">
 			<img src="{% static 'uploads/logo/Logo.png' %}" width="55" height="55" class="d-inline-block align-top">
 			<img src="{% static 'uploads/logo/LogoText.png' %}" width="55" height="55" class="d-inline-block align-top">
-			
+		</a>
+		<a class="nav-link" href="/streampage/communities">
+			<span class="mr-2 d-none d-lg-inline text-white-600"><font color="white">Communities</font></span>
 		</a>
 		<!-- Topbar Navbar -->
 			<ul class="navbar-nav ml-auto">
