datatype page fixed

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -15,6 +15,7 @@
   <script type="text/javascript" src="{% static 'js/tagsinput.js' %}"></script>
   <script type="text/javascript" src="{% static 'js/popper.js' %}"></script>
   <style>
+  
   </style>
 </head>
 
@@ -529,7 +530,7 @@ $( document ).ready(function() {
 });
 
 </script>
-<body class="bg-light">
+<body class="">
 
 <!-- Main Content -->
     <div id="content">
