datatype page fixed

--- a/mystream/streampage/templates/base.html
+++ b/mystream/streampage/templates/base.html
@@ -530,7 +530,7 @@ $( document ).ready(function() {
 });
 
 </script>
-<body class="">
+<body class=" bg-light">
 
 <!-- Main Content -->
     <div id="content">
