--- a/mystream/streampage/templates/datatypes.html
+++ b/mystream/streampage/templates/datatypes.html
@@ -2,19 +2,46 @@
 
 {% block content %}
   <div class="p-3">
-	<button type="button" id="AddDatatype" class="btn btn-primary btn-sm"><i class="fa fa-plus" aria-hidden="true"></i> Add Datatype</button>
-  <br><br><b>{{ community }}</b><br><br> <!---{{dt_resp.0.relatedCommunity}}---> 
+	<button type="button" id="AddDatatype" class="btn btn-primary btn-sm">
+		<i class="fa fa-plus" aria-hidden="true"></i> Add Posttype
+	</button>
+    <button type="button" id="Edit_Primitive" class="btn btn-primary btn-sm">
+		<i class="fas fa-edit" aria-hidden="true"></i>Edit Posttypes
+	</button>	
+	<button type="button" id="Add_Post" class="btn btn-primary btn-sm">
+		<i class="fa fa-plus" aria-hidden="true"></i> Add Post
+	</button>
+    <button type="button" id="Search_Entry" class="btn btn-primary btn-sm">
+		<i class="fa fa-search" aria-hidden="true"></i> Search
+	</button> 
   </div>
-  <div id="Datatypes_list" class="shadow p-3">
-  <div class="row p-3">
-		<div class="col-sm-5">
-			<img src="{{ community.communityPhoto }}" class="img-thumbnail"><br>
+
+  <div id="Datatypes_list" class="">
+  <div class="card mb-4">
+	<div class="card-header bg-white ">
+		<div class="d-flex flex-row align-items-center justify-content-between">
+			<div class="small">
+				{{ community }} Community
+			</div>			
+			<div class="small">
+				Created by: {{ community.communityCreator }} at {{ community.communityCreationDate }}
+			</div>
 		</div>
-		<div class="col-sm-7">
-			<p>{{ community.description }}</p><br>
-			<p>{{ community.communityTags }}</p>
 		</div>
-	</div>
+		<!-- Card Body -->
+		<div class="card-body small">
+			<div class="row">
+				<div class="col-sm-3">
+					<img src="{{ community.communityPhoto }}" width="125" height="100" class="img-thumbnail"><br>
+				</div>
+				<div class="col-sm-9">
+					<p>{{ community.description }}</p>
+					<p>{{ community.communityTags }}</p>
+				</div>
+			</div>
+		</div>
+    </div>
+  </div>
   <div class="container">
 	<div class="row">
 		{% for dt in dt_resp %}
